tests-integration/fixtures/checking/1772824140_record_binder_additional_property/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 39
expression: report
---
Terms
test :: { a :: Int } -> Int

Types

Diagnostics
error[AdditionalProperty]: Additional properties not allowed: b, c
  --> 4:6..4:17
  |
4 | test { a, b, c } = a
  |      ^~~~~~~~~~~
